--- a/Project.css
+++ b/Project.css
@@ -1,47 +1,51 @@
-/*Selected tag {
-    property : value
-}*/
-   
-h3{
-    font-family: 'Poppins', sans-serif;
-    color: black; 
-    font-weight: bolder;
-    text-align: left;
-}
-h2{background-color: fuchsia;
-    font-weight: bolder;
-    text-align: left;
-}
-.firstDiv h3 {background-color: #ebe0d0;}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 
 
-.secondDiv h3 {background-color: #ebe0d0;}
-
-ul{
-    margin: 0;
-    padding: 0;
-}
-
-
-.button_1{
-    height: 38px;
-    border-radius: 10px;
-    padding-left: 20;
-    padding-right: 20;
-    background-color: hotpink
-    
- }
-
-    /*Global*/
-.container{
-        width: 80%;
-        margin: auto;
-        over-flow: hidden;
-         }
-
-.container h3 {
+.center {
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  
+  }
+  
+  body {
     background-color: white;
-    border-color: white;
-    border-width: 10px;
-    border-style: solid;
+    font-family: 'Poppins', sans-serif;
+  }
+  h1{
+
+    font-family: 'Poppins', sans-serif;
+    font-weight: bolder;
+    color: #FF0080;
+    margin-left: 20px;
+
+  
+  }
+
+  .links {
+    text-decoration: none;
+    color: #A91B60;
 }
+  
+  .boxes{
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+    
+  }
+  
+  .box{
+  
+    text-align: left;
+    padding: 1rem 1.5rem;
+    box-shadow: var(--shadow);
+    background: linear-gradient(to bottom, #ffdde1, #ee9ca7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    width: 300px;
+    border: 5px solid white;
+    border-radius: 50px;
+    padding: 50px;
+    margin: 20px;
+  
+  } 
